# blockvisor

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yml  docker-compose.yml.template  erigon.rhai
.github/workflows/: api.yaml  blockvisord.yaml  bv.yaml  publish.yaml
api/: Cargo.toml
api/config/: default.toml  development.toml
api/migrations/: 20220414182329_users.up.sql
api/src/: auth.rs  config.rs  handlers.rs  models.rs  server.rs
babel/data/: babelsup.service
babel/src/: babel_service.rs  babelsup_service.rs  client.rs  fetch_blockchain.rs  jobs_manager.rs  lib.rs  log_buffer.rs  msg_handler.rs  run_sh.rs  upload_job.rs
babel_api/: rhai_plugin_guide.md
babel_api/proto/: babelsup.proto
babel_api/src/: api.rs  engine.rs  plugin.rs  rhai_plugin.rs
babel_api/tests/: utils.rs
blockvisor-api-client-rs/: Cargo.toml  README.md
blockvisor-client-rs/: Cargo.toml  README.md
blockvisor-client-rs/src/: client.rs  types.rs
blockvisord/: Cargo.toml
blockvisord/src/: cli.rs  client.rs  config.rs  containers.rs  dbus.rs  hosts.rs  node.rs  node_data.rs  nodes.rs
blockvisord/tests/: test_bv.rs  test_bv_cmd.rs
bv/: Cargo.toml  build.rs
bv/data/: babel.yaml.template
bv/src/: apptainer_platform.rs  babel_engine.rs  blockvisord.rs  bv.rs  bv_cli.rs  bv_context.rs  cli.rs  commands.rs  config.rs  cookbook_service.rs  firecracker_machine.rs  grpc.rs  hosts.rs  installer.rs  internal_server.rs  nib.rs  nib_meta.rs  node.rs  node_connection.rs  (+9 more)
data/: blockvisor.service  tmux-jailer
src/: node.rs
tests/: test_bv_cmd.rs
(+67 files in other folders)
