[package]
name = "blockvisor-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8", features = ["serde", "v4"] }
